2006-12-20  Per Bothner  <per@bothner.com>

	* configure.in (--with-gcj): New option.
	(WITH_GCJ_DBTOOL): New AM_CONDITIONAL.
	Change some defaults depending on other options.
	* Makefile.am (install-jar): Run gcj-dbtool, if so configured.
	* Make-rules (EXTRA_DBTOOL_GCJFLAGS): New macro.  
	Compile with -findirect-dispatch only if WITH_GCJ_DBTOOL.

	* Make-rules: Remove kawa1 hooks - use '$(JAVA) kawa.repl' to compile.
	(GCJFLAGS): Add -findirect-dispatch.
	* configure.in: Add AC_DISABLE_STATIC.

2006-12-17  Per Bothner  <per@bothner.com>

	* kawa/repl.java (processArgs): Use 'define' rather than 'putt' to
	define variables from the command line.  The former works better
	when main() is inoked fter start-up, as is done by 'qalbum -R'.

2006-12-15  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (setLine): Moved to Compilation.
	Compiling with gcj complained about an ambiguity and it seems
	just as clean to move it to avoid the problem.

	* build.xml: Update for XMLParser changes.

2006-12-14  Per Bothner  <per@bothner.com>

	* configure.in (SAX2_PREPROCESS): New substiution varible.
	* Makefile.m (JAVA4_FEATURES, NO_JAVA4_FEATURES): Define preprocess
	variable SAX2 depending on whether --with-sax2 was specified.

2006-12-12  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run): Only special handling of SyntaxException if
	it's the same SourceMessages - rather than say from an fn:doc.

2006-12-11  Chris Wegrzyn <chris.wegrzyn@gmail.com>

	* kawa/standard/syntax_case.java (rewriteForm): Make sure input form
	is nested inside LetExp used to implement syntax-case.
	This fixes Savannah bug #18105 "with-syntax causes
	NullPointerException during compilation but not in repl".

2006-12-11  Per Bothner  <per@bothner.com>

	* kawa/standard/object.java (scanClassDef, rewriteForm): Handle
	SyntaxForm around keywords.  Fixes Savannah bug #18504.

2006-12-09  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java: Remove unneded import.